# magic-specs

./: .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  search.html
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml
definition/: index.html
docs/: definition.md  index.md
magic_specs/: _batched.py  _definition.py  _import_from_string.py  _iterable_cache.py  _ttl_cache.py  definition.py  utils.py
search/: search_index.json
tests/: benchmarks.py  conftest.py  test_batch_generator.py  test_defintion_class.py  test_import_from_string.py
